--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,15 +22,20 @@ plot_icon = {version = "0.3.0", optional = true, default-features = false, featu
 parity-scale-codec = {version = "3.6.4", default-features = false, features = ["derive", "bit-vec"]}
 primitive-types = {version = "0.12.1", default-features = false}
 scale-info = {version = "2.9.0", default-features = false}
+serde = {version = "1.0.186", optional = true, features = ["derive", "std"]}
 sp-arithmetic = {version = "17.0.0", default-features = false}
 sp-core = {version = "22.0.0", optional = true}
 sp-core-hashing = {version = "10.0.0", default-features = false}
 sp-runtime = {version = "25.0.0", optional = true}
 
+[dev-dependencies]
+serde_json = "1.0.105"
+
 [features]
 default = ["std"]
-std = ["plot_icon", "sp-core/std", "sp-runtime/std"]
 embed-display = ["base58", "blake2"]
+serde-std = ["frame-metadata/serde_full", "std", "serde"]
+std = ["plot_icon", "sp-core/std", "sp-runtime/std"]
 
 [lib]
 name = "substrate_parser"
